<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<name>Singularity Lab</name>
	<description>Tests and Demos for the Singularity Engine</description>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cmt</groupId>
	<artifactId>singularity-lab</artifactId>
	<version>0.1</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>24</maven.compiler.release>
		<lwjgl.version>3.4.1</lwjgl.version>
		<joml.version>1.10.8</joml.version>
		<platform>windows</platform>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.cmt</groupId>
			<artifactId>singularity</artifactId>
			<version>0.1</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.joml</groupId>
			<artifactId>joml</artifactId>
			<version>${joml.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-vulkan</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-par</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-stb</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-bgfx</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-assimp</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-jemalloc</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-shaderc</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-vma</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-stb</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-par</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-bgfx</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-vma</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-assimp</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-shaderc</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-jemalloc</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<!-- https://www.antlr.org/api/maven-plugin/latest/index.html -->
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.13.2</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<configuration>
							<target>
								<exec executable="git" outputproperty="git.revision" failifexecutionfails="false" errorproperty="">
									<arg value="describe"/>
									<arg value="--tags"/>
									<arg value="--always"/>
									<arg value="--abbrev=11"/>
									<arg value="HEAD"/>
								</exec>
								<property name="versionFile" value="${project.basedir}/src/main/resources/com/cmt/singularity/lab/${project.artifactId}.version"/>
								<property name="fullVersion" value="${project.version} #${git.revision} ${maven.build.timestamp}"/>
								<echo file="${versionFile}">${fullVersion}</echo>
								<echo>New version is ${fullVersion}</echo>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- https://maven.apache.org/surefire/maven-surefire-plugin/examples/testng.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!-- https://stackoverflow.com/questions/64688896/how-to-make-testng-print-detail-message-about-the-failure -->
					<trimStackTrace>false</trimStackTrace>
					<argLine>--add-modules com.cmt.singularity.lab -Dfile.encoding=UTF-8</argLine>
					<workingDirectory>${project.basedir}/data/</workingDirectory>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-dependency-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.9.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-jar-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>
							<mainClass>com.cmt.singularity.lab.gameloop.Main</mainClass>
						</manifest>
						<manifestEntries>
							<Automatic-Module-Name>com.cmt.singularity.lab</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/aggregate-mojo.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<outputDirectory>${project.basedir}/docs</outputDirectory>
					<reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
					<show>private</show>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>